# ripit

./: Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
src/: app.rs  commits_map.rs  error.rs  sync.rs  tag.rs  util.rs
tests/: tests.rs
tests/env/: mod.rs
